<resources>
    <string name="app_name" translatable="false">AndroTainer</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="container_logo">Container Logo</string>
    <string name="about_app">**AndroTainer** is an open source app. This *SERVICE* is provided by Dokeraj at no cost and is intended for use as is.\nSource code can be found here: https://github.com/steven-ahfu/AndroTainer\n\n`Current version: %1$s`</string>
    <string name="users_manage_note">`ANY DELETED CREDENTIAL WILL ONLY BE REMOVED FROM ANDROTAINER`\n\nPro tip: You can find the stored credentials by swiping right on the login screen.</string>
    <string name="dialogWarning">If `CONTINUE` is chosen, you will be logged out and pushed back to the login screen.</string>
    <string name="hiddenHeader">Hidden Functionalities</string>
    <string name="hiddenExplanations">`Container actions` - Long press a container card to start, stop, restart, pause, unpause, or open logs.\n\n`Search containers` - Use the container name field above the list.\n\n`Sort live usage` - Choose CPU usage or Memory usage from the sort menu.\n\n`Change refresh time for logs` - Long press the **Auto Refresh** button.</string>
    <string name="deletingContainerNote">Long press the remove button to delete the container **{containerName}**</string>
    <!--
     URLs to portainer
     -->
    <string name="authenticate" translatable="false">{baseUrl}/api/auth</string>
    <string name="getEnpointId" translatable="false">{baseUrl}/api/endpoints</string>
    <string name="getDockerContainers" translatable="false">{baseUrl}/api/endpoints/{endpointId}/docker/containers/json</string>
    <string name="StartStopContainer" translatable="false">{baseUrl}/api/endpoints/{endpointId}/docker/containers/{containerId}/{actionType}</string>
    <string name="RestartContainer" translatable="false">{baseUrl}/api/endpoints/{endpointId}/docker/containers/{containerId}/restart</string>

    <string name="removeDockerContainer" translatable="false">{baseUrl}/api/endpoints/{endpointId}/docker/containers/{containerId}</string>
    <string name="getContainerStats" translatable="false">{baseUrl}/api/endpoints/{endpointId}/docker/containers/{containerId}/stats</string>
    <string name="inspectContainer" translatable="false">{baseUrl}/api/endpoints/{endpointId}/docker/containers/{containerId}/json</string>
    <string name="pauseUnpauseContainer" translatable="false">{baseUrl}/api/endpoints/{endpointId}/docker/containers/{containerId}/{pauseAction}</string>
    <string name="getLog" translatable="false">{baseUrl}/api/endpoints/{endpointId}/docker/containers/{containerId}/logs</string>
    <!--
    URLs to logos for docker details fragment (json format)
    -->
    <string name="allServicesLogos" translatable="false">[{\"names\":[\"swag\"],\"url\":\"https://i.imgur.com/EJ1pOeM.png\",\"width\":400,\"height\":400},{\"names\":[\"wikijs\",\"requarks/wiki\"],\"url\":\"https://i.imgur.com/2yfdYWt.png\",\"width\":800,\"height\":233},{\"names\":[\"bazarr\"],\"url\":\"https://i.imgur.com/reWArsB.png\",\"width\":512,\"height\":512},{\"names\":[\"booksonic\"],\"url\":\"https://i.imgur.com/87KtEu1.png\",\"width\":512,\"height\":512},{\"names\":[\"jackett\"],\"url\":\"https://i.imgur.com/Lz06x5b.png\",\"width\":800,\"height\":185},{\"names\":[\"mariadb\"],\"url\":\"https://i.imgur.com/rpInfpg.png\",\"width\":628,\"height\":512},{\"names\":[\"netdata\"],\"url\":\"https://i.imgur.com/kzLB8ou.png\",\"width\":800,\"height\":132},{\"names\":[\"nextcloud\"],\"url\":\"https://i.imgur.com/n0sUUPo.png\",\"width\":782,\"height\":512},{\"names\":[\"ombi\"],\"url\":\"https://i.imgur.com/dKJ3ECe.png\",\"width\":512,\"height\":512},{\"names\":[\"organizr\"],\"url\":\"https://i.imgur.com/qJZ1kP5.png\",\"width\":512,\"height\":512},{\"names\":[\"pihole\"],\"url\":\"https://i.imgur.com/IvLTuKF.png\",\"width\":800,\"height\":189},{\"names\":[\"plex\"],\"url\":\"https://i.imgur.com/KtLTu8y.png\",\"width\":800,\"height\":259},{\"names\":[\"portainer\"],\"url\":\"https://i.imgur.com/61ODRl3.png\",\"width\":800,\"height\":234},{\"names\":[\"postgres\"],\"url\":\"https://i.imgur.com/GhkyvuT.png\",\"width\":408,\"height\":512},{\"names\":[\"qbittorrent\"],\"url\":\"https://i.imgur.com/SmDt1PA.png\",\"width\":512,\"height\":512},{\"names\":[\"radarr\"],\"url\":\"https://i.imgur.com/C4usmjf.png\",\"width\":512,\"height\":512},{\"names\":[\"sonarr\"],\"url\":\"https://i.imgur.com/e4qj98C.png\",\"width\":512,\"height\":512},{\"names\":[\"tautulli\"],\"url\":\"https://i.imgur.com/8XCuIQ8.png\",\"width\":800,\"height\":225},{\"names\":[\"watchtower\"],\"url\":\"https://i.imgur.com/kiALl1f.png\",\"width\":512,\"height\":512},{\"names\":[\"vabene1111/recipes\"],\"url\":\"https://i.imgur.com/BJ8lSfu.png\",\"width\":512,\"height\":512},{\"names\":[\"vaultwarden/server\"],\"url\":\"https://i.imgur.com/0vVQYge.png\",\"width\":800,\"height\":506},{\"names\":[\"zerotier\"],\"url\":\"https://i.imgur.com/I6QHi48.png\",\"width\":800,\"height\":122}]</string>

    <string name="docker_containers_title">Docker Containers</string>
    <string name="total">Total</string>
    <string name="running">Running</string>
    <string name="stopped">Stopped</string>
    <string name="unhealthy" translatable="false">Unhealthy</string>
    <plurals name="containers_count" translatable="false">
        <item quantity="one">%d container</item>
        <item quantity="other">%d containers</item>
    </plurals>
    <string name="containers_loading" translatable="false">Loading containers…</string>
    <string name="sort_button_label" translatable="false">Sort: %1$s %2$s</string>
    <string name="clear_search" translatable="false">X</string>
    <string name="filter_running" translatable="false">Running</string>
    <string name="filter_healthy" translatable="false">Healthy</string>
    <string name="filter_exited" translatable="false">Exited</string>
    <string name="filter_created" translatable="false">Created</string>
    <string name="sort_containers" translatable="false">Sort containers</string>
    <string name="sort_by_name" translatable="false">Name</string>
    <string name="sort_by_uptime" translatable="false">Uptime</string>
    <string name="sort_by_created" translatable="false">Created</string>
    <string name="sort_by_cpu" translatable="false">CPU usage</string>
    <string name="sort_by_memory" translatable="false">Memory usage</string>
    <string name="action_start" translatable="false">Start</string>
    <string name="action_stop" translatable="false">Stop</string>
    <string name="action_restart" translatable="false">Restart</string>
    <string name="action_pause" translatable="false">Pause</string>
    <string name="action_unpause" translatable="false">Unpause</string>
    <string name="action_open_logs" translatable="false">Open logs</string>
    <string name="live_stats_title" translatable="false">Live Stats</string>
    <string name="stats_unavailable" translatable="false">Stats unavailable</string>
    <string name="action_alerts" translatable="false">Alerts</string>
    <string name="threshold_explainer" translatable="false">Get a notification when this container exceeds a limit. CPU alerts need 3 consecutive polls over the limit; memory alerts fire immediately. Leave a field blank for no alert.</string>
    <string name="threshold_cpu_hint" translatable="false">CPU limit</string>
    <string name="threshold_mem_hint" translatable="false">Memory limit</string>
    <string name="threshold_interval_hint" translatable="false">Check interval</string>
    <string name="threshold_save" translatable="false">Save</string>
    <string name="threshold_cancel" translatable="false">Cancel</string>
    <string name="threshold_delete" translatable="false">Remove</string>
    <string name="logout">Logout</string>
    <string name="manage_users">Manage Users</string>
    <string name="endpoints">Endpoints</string>
    <string name="about">About</string>
    <string name="hidden_functionalities">Hidden Functionalities</string>
    <string name="search_hint">Search container name</string>
    <string name="api_key_hint">Api Key</string>
    <string name="login_subtitle" translatable="false">Connect to your Portainer server</string>
    <string name="username_hint">UserName</string>
    <string name="password_hint">Password</string>
    <string name="use_api_key">Use Api Key</string>
    <string name="no_saved_credentials">No saved user credentials</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="timestamp">Timestamp</string>
    <string name="lines_1000">1000 lines</string>
    <string name="stop">Stop</string>
    <string name="status_icon">Status Icon</string>
    <string name="logged_in_user_warning">This is the currently logged in user!</string>
    <string name="api_key_user">API Key User</string>
    <string name="delete">Delete</string>
    <string name="docker_name">Docker name</string>
    <string name="local_endpoint">Local Endpoint</string>
    <string name="docker_sock_url" translatable="false">https://var.docker.sock</string>
    <string name="delete_current_user_warning">You are about to delete the currently logged in user</string>
    <string name="continue_text">continue</string>
    <string name="starting">STARTING</string>
    <string name="log_template" translatable="false">AJKDE TEMPLARTE</string>
    <string name="servers_and_users">Servers And Users</string>
    <string name="available_servers_users">Available Servers and users</string>
    <string name="login">Login</string>
    <string name="placeholder_url" translatable="false">https://numsivacha.com/portainerX/cant/</string>
    <string name="placeholder_username" translatable="false">Numsi</string>
    <string name="remove">REMOVE</string>
    <string name="container_logs_title">%1$s Logs</string>
    <plurals name="lines_count">
        <item quantity="one">%d line</item>
        <item quantity="other">%d lines</item>
    </plurals>
    <string name="mydomain_hint" translatable="false">https://mydomain.com/portainer</string>

</resources>
