<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:layout_marginTop="5dp"
    app:cardPreventCornerOverlap="false"
    app:cardMaxElevation="0dp"
    android:elevation="10dp"
    app:cardUseCompatPadding="false"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usersCardHolderLayout"
        android:background="@color/dis5">

        <TextView
            android:id="@+id/tvCardUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:paddingBottom="10dp"
            android:gravity="start"
            android:text="@string/docker_name"
            android:textColor="@color/disText2"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/ivUser"
            app:layout_constraintTop_toBottomOf="@+id/tvServerUrl" />

        <ImageView
            android:id="@+id/ivLinkUrl"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/placeholder_url"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_web_link"
            app:tint="@color/disText1" />

        <TextView
            android:id="@+id/tvServerUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            tools:text="Https://nesto.com/portainer"
            android:paddingEnd="26dp"
            android:textColor="@color/disText1"
            android:textSize="12.2sp"
            app:layout_constraintStart_toEndOf="@+id/ivLinkUrl"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="9dp"
            android:contentDescription="@string/placeholder_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvServerUrl"
            app:srcCompat="@drawable/ic_person_login"
            app:tint="@color/disText2" />

        <TextView
            android:id="@+id/tvLoggedUserWarrning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="9dp"
            android:text="@string/logged_in_user_warning"
            android:textColor="@color/blue_main"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCardUsername" />

        <TextView
            android:id="@+id/tvIsUserApiKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="9dp"
            android:text="@string/api_key_user"
            android:textColor="@color/orange_warning"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLoggedUserWarrning" />

        <Button
            android:id="@+id/btnUserDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp"
            android:width="110dp"
            android:backgroundTint="@color/disRed"
            android:text="@string/delete"
            android:textColor="@color/disText2"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIsUserApiKey" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>